--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,7 +1,6 @@
 .menuOverlay {
+  z-index: 10;
   position: absolute;
-  top: 8px;
-  right: 8px;
-  display: hidden;
-  border: 4px solid green;
+  left: 110px 
+
 }
