--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,9 +1,8 @@
 .menuOverlay {
   z-index: 10;
   position: absolute;
-  left: 110px 
-
+  left: 110px;
 }
-.test{
-  background-color: green;
+.test {
+  background: none;
 }
