font i global in app

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
+@font-face {
+  font-family: "SatoriTRIAL";
+  src: url("./assets/fonts/SatoriTRIAL-Light.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SatoriTRIAL";
+  src: url("./assets/fonts/SatoriTRIAL-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SatoriTRIAL";
+  src: url("./assets/fonts/SatoriTRIAL-Medium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SatoriTRIAL";
+  src: url("./assets/fonts/SatoriTRIAL-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+
 body {
   font-family: "SatoriTrial", sans-serif;
   background-color: black;
