homepage.css now centered the board instead of boardwrapper in component repo

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,8 +1,6 @@
-.menuOverlay {
-  z-index: 10;
-  position: absolute;
-  left: 110px;
-}
-.test {
-  background: none;
+div {
+  height: 100dvh;
+ display: flex;
+ align-items: center;
+ justify-content: center;
 }
